# xfind

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  impl_plan.md  prompt.md  spec.md
.github/workflows/: build.yml
src/: ACTIONS.C  ACTIONS.H  CONFIG.C  CONFIG.H  FSWALK.C  FSWALK.H  INDEX.C  INDEX.H  MATCH.C  MATCH.H  MXFIDX.C  MXFIND.C  PLATFORM.H  UITUI.C  UITUI.H
x68k/: Makefile
